--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.Health_Mate"
         tools:targetApi="31">
         <activity
+            android:name=".BookApointmentActivity"
+            android:exported="false" />
+        <activity
+            android:name=".DoctorDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FindDoctorActivity"
+            android:exported="false" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
